--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.8.3",
     "graphql": "^16.8.0",
     "graphql-tag": "^2.12.6",
+    "react": "^18.2.0",
     "sweetalert2": "^11.7.27",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
